fix dialog jumping; change image table columns; fix os icon displaying

--- a/teamcity-azure-plugin-server/src/main/resources/buildServerResources/azure-settings.css
+++ b/teamcity-azure-plugin-server/src/main/resources/buildServerResources/azure-settings.css
@@ -53,3 +53,10 @@
 .editImageLink_disabled {
     color: #ccc;
 }
+.settings .maxInstancesCount,
+.settings .maxInstancesCount.name {
+    width: 80px;
+    max-width: 80px;
+    padding: 1px 6px;
+    text-align: center;
+}
